tests/ui-stable/printdoc-binary.stderr
error: byte strings are not supported in formatting macros
 --> $DIR/printdoc-binary.rs:4:15
  |
4 |     printdoc!(b"");
  |               ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
